--- a/reports/satpathy_eda.Rmd
+++ b/reports/satpathy_eda.Rmd
@@ -13,6 +13,9 @@ output:
 ```{r setup, include=FALSE}
 library(dplyr)
 library(ggplot2)
+library(Matrix)
+library(R.utils)
+library(GenomeInfoDbData)
 
 knitr::opts_chunk$set(cache = TRUE, warning = FALSE, message = FALSE)
 ```
@@ -22,49 +25,84 @@ knitr::opts_chunk$set(cache = TRUE, warning = FALSE, message = FALSE)
 barcodes_url <- 'https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE129785&format=file&file=GSE129785%5FscATAC%2DTME%2DTCells%2Ecell%5Fbarcodes%2Etxt%2Egz'
 matrix_url <- 'https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE129785&format=file&file=GSE129785%5FscATAC%2DTME%2DTCells%2Emtx%2Egz'
 peaks_url <- 'https://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE129785&format=file&file=GSE129785%5FscATAC%2DTME%2DTCells%2Epeaks%2Etxt%2Egz'
+annotatios_url <- 'https://changseq.s3.amazonaws.com/Jeff/10x_ScATAC/scATAC_TME_TCells_SummarizedExperiment.final.rds'
 
+if ( ! dir.exists('../data/satpathy2019/') ){
+  dir.create('../data/satpathy2019/')
+}
 ## dowloading data
-if ( ! file.exists('../data/satpathy2016/barcodes.tsv')) {
-      download.file(barcodes_url, destfile = '../data/hcv/satpathy2016/barcodes.tsv.gz')
-      gunzip('../data/hcv/satpathy2016/barcodes.tsv.gz', 
-             destname = '../data/hcv/satpathy2016/barcodes.tsv',
+if ( ! file.exists('../data/satpathy2019/barcodes.tsv')) {
+      download.file(barcodes_url, destfile = '../data/satpathy2019/barcodes.tsv.gz')
+      gunzip('../data/satpathy2019/barcodes.tsv.gz', 
+             destname = '../data/satpathy2019/barcodes.tsv',
              remove = FALSE)  
 }
-if ( ! file.exists('../data/satpathy2016/matrix.mtx')){
-        download.file(matrix_url, destfile = '../data/satpathy2016/matrix.mtx.gz')
-        gunzip('../data/hcv/satpathy2016/matrix.mtx.gz', 
-               destname = '../data/hcv/satpathy2016/matrix.mtx', 
+if ( ! file.exists('../data/satpathy2019/matrix.mtx')){
+        download.file(matrix_url, destfile = '../data/satpathy2019/matrix.mtx.gz')
+        gunzip('../data/satpathy2019/matrix.mtx.gz', 
+               destname = '../data/satpathy2019/matrix.mtx', 
                remove = FALSE)  
 }
-if ( ! file.exists('../data/satpathy2016/genes.tsv')){
-        download.file(peaks_url, destfile = '../data/satpathy2016/genes.tsv.gz')
-        gunzip('../data/hcv/satpathy2016/genes.tsv.gz', 
-               destname = '../data/hcv/satpathy2016/genes.tsv',
+if ( ! file.exists('../data/satpathy2019/genes.tsv')){
+        download.file(peaks_url, destfile = '../data/satpathy2019/genes.tsv.gz')
+        gunzip('../data/satpathy2019/genes.tsv.gz', 
+               destname = '../data/satpathy2019/genes.tsv',
                remove = FALSE) 
+}
+if ( ! file.exists('../data/satpathy2019/scATAC_TME_TCells_SummarizedExperiment.final.rds')) {
+  download.file(annotatios_url,
+              '../data/satpathy2019/scATAC_TME_TCells_SummarizedExperiment.final.rds')
 }
 ```
 
 
 ```{r loading_data}
 ## barcodes
-barcodes <- read.table('../data/satpathy2016/barcodes.tsv', 
+barcodes <- read.table('../data/satpathy2019/barcodes.tsv', 
                        header = TRUE)  
 barcodes.s <- barcodes$Barcodes
 
 ## peaks
-peaks <- read.table('../data/satpathy2016/genes.tsv', header = TRUE)
+peaks <- read.table('../data/satpathy2019/genes.tsv', header = TRUE)
 peaks <- as.character(peaks$Feature)
 
 ## counts
-counts <- readMM('../data/satpathy2016/matrix.mtx')
+counts <- readMM('../data/satpathy2019/matrix.mtx')
 rownames(counts) <- as.character(peaks)
 colnames(counts) <- barcodes.s
 ```
 
-```{r run_cistopic}
-cisTopicObject <- createcisTopicObject(counts[1:100,1:100], project.name='AdBrCortex_accessibility')
-cisTopicObject <- addCellMetadata(cisTopicObject, cell.data = barcodes)
+```{r}
+
+summaryTCells <- readRDS('../data/satpathy2019/scATAC_TME_TCells_SummarizedExperiment.final.rds')
+t_cell_clust <- summaryTCells$T_Cell_Cluster
+cluster_labs <- paste0('Cluster', 1:19)        
+cell_type <- c('1-Naive CD4 T', '2-Activated CD4', '3-Th1', '4-Memory CD4 T',
+               '5-Th17', '6-Th 1', '7-Th 2', '8-Treg 1',
+               '9-Treg 2', '10-Treg 3', '11-Treg 4', '12-Effector CD8 T',
+               '13-Naive CD8 T', '14-Memory CD8 T', '15-Early TEx', '16-Intermediate TEx',
+               '17-Terminal TEx', '18-Other T', '19-Other T')
+cluster_cell_types <- plyr::mapvalues(t_cell_clust, 
+                                      from = cluster_labs, 
+                                      to = cell_type)
+satpathy.ann <- data.frame(barcodes=barcodes.s, cell_type=cluster_cell_types)
+satpathy.ann <- mutate(satpathy.ann, barcodes=paste0(barcodes, '.atac'))
+head(satpathy.ann)
+## miller annotations
 ```
 
 
+```{r subsetting}
+satpathy.ann$cell_type <- as.character(satpathy.ann$cell_type)
+cd8tcells <- c('12-Effector CD8 T',
+               '13-Naive CD8 T', 
+               '14-Memory CD8 T', 
+               '15-Early TEx', 
+               '16-Intermediate TEx',
+               '17-Terminal TEx')
+cd8t_ann <- filter(satpathy.ann, cell_type %in% cd8tcells)
+cd8t_ann$barcodes <- gsub('.atac', '', cd8t_ann$barcodes)
 
+cd8t_barcodes <- colnames(counts) %in% cd8t_ann$barcodes
+counts_cd8 <- counts[, cd8t_barcodes]
+```
