adding bacth correction

--- a/reports/himmer_eda.Rmd
+++ b/reports/himmer_eda.Rmd
@@ -2,19 +2,27 @@
 title: "Himmer data EDA"
 author: "Health Data Science Unit"
 date: "2/12/2020"
-output: html_document
+output: 
+   html_document
 ---
 
+## Exploratory Data Analysis on Himmer data
 
 ```{r include=FALSE}
 library(Seurat)
 library(tidyverse)
 source('../scripts/pipeline.R')
+library(harmony)
 
 knitr::opts_chunk$set(message = FALSE,
                       warning = FALSE, 
-                      cache = TRUE)
+                      cache = TRUE,
+                      fig.width = 7,
+                      fig.height = 7, 
+                      fig.align = TRUE)
 ```
+
+## Loading data
 
 ```{r loading_data}
 tex <- read.csv('../data/nina_thimme_raw_counts.csv', 
@@ -23,19 +31,45 @@ r_names <- tex$X
 tex <- select(tex, -X)
 tex_mtx <- apply(tex, 2, as.numeric)
 rownames(tex_mtx) <- r_names
+## extracting patient tags
 
 tex_seu <- CreateSeuratObject(counts = tex_mtx, project = 'Tex', min.cells = 1, assay = 'rna')
 tex_seu <- st_workflow(tex_seu, n_features = 1000, n_pca_dims = 100)
 ```
 
+## Quality control
+
+```{r}
+plot(tex_seu$nCount_rna, tex_seu$nFeature_rna, col = tex_seu$orig.ident)
+```
+
+## Batch effect by patient
 
 ```{r}
 DimPlot(tex_seu, group.by = 'orig.ident', reduction = 'umap') 
 ```
 
+## Removing batch effects
+
+### Harmony
+
 ```{r}
-FeaturePlot(tex_seu, features = c('PDCD1--chr2', 'EOMES--chr3',      ## Tex
-                                  'HAVCR2--chr5', 'ENTPD1--chr10',
-                                  'TCF7--chr5', 'ID3--chr1'), ## Terminally
-            reduction = 'umap') 
+patients <- tex_seu$orig.ident
+tex_df <- as.data.frame(t(tex_mtx))
+tex_sp <- split(tex_df, f = patients) 
+tex_sp <- lapply(tex_sp, function(x) t(x) )
+#saveRDS(tex_sp, '../data/TEx_splitted.rds')
 ```
+
+
+# Liger
+
+```{r}
+TEx <- readRDS('../data/TEx_batch_correction_tsne.rds')
+TEx$tsne %>% as.data.frame() %>% mutate(patient_id=patients) %>%
+             rename(tSNE1=V1, tSNE2=V2) %>%
+             ggplot(aes(tSNE1, tSNE2, colour=patient_id)) + geom_point() + theme_classic()
+TEx_umap <- uwot::umap(TEx$H_norm)
+TEx_umap %>% as.data.frame() %>% ggplot(aes(V1, V2, colour=patients)) + geom_point() 
+```
+
